Fix spacing on the bottom of the page.
- Add margins and padding to relative containers so content is spaced
  out more.

--- a/src/static/cs/styles.css
+++ b/src/static/cs/styles.css
@@ -17,7 +17,7 @@ body {
     position: relative;
     z-index: 1;
     background: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
-    padding: 2rem 1rem 0 1rem;
+    padding: 2rem 1rem 1rem 1rem;
     border-radius: 0.5rem
 
 }
@@ -32,6 +32,7 @@ body {
 .footer-content {
     background-color: rgba(0, 0, 0, 0.75);
     padding: 1rem 2rem 0 2rem;
+    margin-top: 2rem;
     color: white; /* Ensure text visability */
     border-radius: 0.5rem;
 
